--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
   }
   /* Contenedor principal */
-  .login-container {
+  .login-page {
     display: flex;
     justify-content: center;
     align-items: center;
